# api_study_fr_er

./: course.db  items_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
users/: schemas.py  views.py
