[project]
name = "api-study-fr-er"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.3",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]
